--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container-lp">
+  <div>
+    <%# LOGO %>
+  </div>
+  <div>
+    <p>This app was made by three professional drunks, therefore, the results shown are not scientifically accurate, so we won't take any responsibility for the shit you make while your dunk !</p>
+  </div>
+  <div>
+    <%= link_to "Start the App", index_path, class: "btn btn-ghost " %>
+  </div>
+
+</div>
