tabs controllers, not done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,10 +3,10 @@
     <%# LOGO %>
   </div>
   <div>
-    <p>This app was made by three professional drunks, therefore, the results shown are not scientifically accurate, so we won't take any responsibility for the shit you make while your dunk !</p>
+    <p>This app was made by three professional drunks, therefore, the results shown are not scientifically accurate, so we won't take any responsibility for the shit you make while you're dunk !</p>
   </div>
   <div>
-    <%= link_to "Start the App", index_path, class: "btn btn-ghost " %>
+    <%# <%= link_to "Start the App", index_path, class: "btn btn-ghost " %> %>
   </div>
 
 </div>
