--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
     <p>This app was made by three professional drunks, therefore, the results shown are not scientifically accurate, so we won't take any responsibility for the shit you make while your dunk !</p>
   </div>
   <div>
-    <%= link_to "Start the App", index_path, class: "btn btn-ghost " %>
+    <%# <%= link_to "Start the App", index_path, class: "btn btn-ghost " %> %>
   </div>
 
 </div>
