--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,7 @@
 @import "components/index";
 @import "pages/index";
 
+body {
+  background-color: #0D0D0D;
+  font-family: 'Montserrat', sans-serif;
+}
