--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,36 +1,63 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
+  <div class="container-fluid d-flex justify-content-between">
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
+    <div class="burger">
+      <button class="navbar-toggler" style="border:0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class=""><i class="fa-solid fa-bars" style="color:white"></i></span>
+      </button>
     </div>
+
+
+    <div class="logo-AID">
+      <%= link_to "#", class: "navbar-brand" do %>
+        <%= image_tag "logo.png" %>
+      <% end %>
+    </div>
+
+    <div class="profile-user">
+      <button class="navbar-toggler" style="border:0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContentProfile" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class=""><i class="fa-solid fa-user" style="color:white"></i></span>
+      </button>
+    </div>
+  </div>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav me-auto">
+      <li class="nav-item">
+        <%= link_to "#", class: "nav-link" do %>
+          <i class="fa-solid fa-gamepad"></i> Games
+        <% end %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "#", class: "nav-link" do %>
+          <i class="fa-solid fa-comments"></i> Charooms
+        <% end %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "#", class: "nav-link" do %>
+          <i class="fa-solid fa-map-location-dot"></i> Maps
+        <% end %>
+      </li>
+    </ul>
+  </div>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContentProfile">
+    <ul class="navbar-nav me-auto text-end">
+      <li class="nav-item">
+        <%= link_to "#", class: "nav-link" do %>
+          History <i class="fa-solid fa-clock-rotate-left"></i>
+        <% end %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "#", class: "nav-link" do %>
+          Profile <i class="fa-regular fa-id-badge"></i>
+        <% end %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "#", class: "nav-link", data: {turbo_method: :delete} do %>
+          Log out <i class="fa-solid fa-power-off"></i>
+        <% end %>
+      </li>
+    </ul>
   </div>
 </div>
