--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,26 @@
 <div class="container-lp">
-  <div>
-    <%# LOGO %>
-  </div>
-  <div>
-    <p>This app was made by three professional drunks, therefore, the results shown are not scientifically accurate, so we won't take any responsibility for the shit you make while your dunk !</p>
-  </div>
-  <div>
-    <%= link_to "Start the App", index_path, class: "btn btn-ghost " %>
+
+  <div class="logo-lp">
+    <%= image_tag "logo.png" %>
   </div>
 
+  <div class="disclaimer-lp">
+    <p id="disclaimer-text">This app was made by three professional drunks, therefore, the results shown are not scientifically accurate, so we won't take any responsibility for the shit you make while your drunk !</p>
+  </div>
+
+  <div class="btn-startcontainer">
+    <div class="btn-start">
+      <%# <%= link_to "Start the App", index_path, class: "btn btn-ghost " %>
+      <p id="startapp"><strong>LET'S GO !</strong></p>
+    </div>
+  </div>
+
+  <div class="btn-readmorecontainer">
+    <div class="btn-readmore">
+      <p id="readmore">READ MORE</p>
+    </div>
+  </div>
+  <div id="angles-down">
+   <i class="fa-solid fa-angles-down" style="font-size:25px"></i>
+  </div>
 </div>
