--- a/app/assets/stylesheets/pages/_landingpage.scss
+++ b/app/assets/stylesheets/pages/_landingpage.scss
@@ -1,3 +1,92 @@
-.container {
-  
+.container-lp{
+  background-color: #0D0D0D;
+  width: 100%;
+  height: 100vh;
+}
+
+.logo-lp {
+  display: flex;
+  justify-content: center;
+  padding: 56px;
+}
+
+img {
+  width: 50%;
+}
+
+.disclaimer-lp {
+  display: flex;
+  margin: 56px;
+  background: linear-gradient(180deg, #989898 0%, #6b6b6b 100%);
+  color: white;
+  border-radius: 15px;
+}
+
+#disclaimer-text {
+  margin: 15px;
+  text-align: center;
+
+}
+
+.btn-startcontainer {
+ display: flex;
+ justify-content: center;
+ margin: 88px;
+}
+
+.btn-start {
+  display: flex;
+  align-items: center ;
+  justify-content: center;
+  position: absolute;
+  width: 300px;
+  height: 88px;
+  background: linear-gradient(180deg, #91F5AD 0%, #2DE360 100%);
+  border-radius: 20px;
+
+}
+
+#startapp {
+  display:flex;
+  align-items: center ;
+  justify-content: center;
+  margin: 0;
+  font-size: 20px;
+  color: rgb(57, 57, 57);
+
+
+}
+
+.btn-readmorecontainer {
+  display: flex;
+  justify-content: center;
+  margin: 88px;
+ }
+
+
+.btn-readmore {
+  display: flex;
+  align-items: center ;
+  justify-content: center;
+  position: absolute;
+  width: 300px;
+  height: 53px;
+  background: linear-gradient(180deg, #FAC81E 0%, #FAC81EAD 100%);
+  border-radius: 20px;
+  margin-top: inherit;
+}
+
+#readmore {
+  align-items: center ;
+  justify-content: center;
+  margin: 0;
+  color: rgb(57, 57, 57);
+}
+
+#angles-down {
+  display: flex;
+  align-items: center ;
+  justify-content: center;
+  margin-top: 180px;
+  color: #989898;
 }
