cloudinary working for users

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,8 +11,8 @@
 @import "components/index";
 @import "pages/index";
 @import "pages/landingpage";
+@import "pages/show-user";
 
 body {
   background-color: #0D0D0D;
-  font-family: 'Montserrat', sans-serif;
 }
