--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -49,12 +49,12 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to "#", class: "nav-link" do %>
+        <%= link_to "", class: "nav-link" do %>
           Profile <i class="fa-regular fa-id-badge"></i>
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to "#", class: "nav-link", data: {turbo_method: :delete} do %>
+        <%= link_to destroy_user_session_path, class: "nav-link", data: {turbo_method: :delete} do %>
           Log out <i class="fa-solid fa-power-off"></i>
         <% end %>
       </li>
