--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,26 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :username,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "username" }%>
+    <%= f.input :first_name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "first-name" }%>
+    <%= f.input :last_name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "last-name" }%>
+    <%= f.input :height, placeholder: "cm",
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "height" }%>
+    <%= f.input :weight, placeholder: "kg",
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "weight" }%>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
