--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
 
 
     <div class="logo-AID">
-      <%= link_to "#", class: "navbar-brand" do %>
+      <%= link_to user_dashboard_path(current_user.id), class: "navbar-brand" do %>
         <%= image_tag "logo.png" %>
       <% end %>
     </div>
@@ -30,7 +30,7 @@
       </li>
       <li class="nav-item">
         <%= link_to "#", class: "nav-link" do %>
-          <i class="fa-solid fa-comments"></i> Charooms
+          <i class="fa-solid fa-comments"></i> Chatrooms
         <% end %>
       </li>
       <li class="nav-item">
@@ -49,7 +49,7 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to "", class: "nav-link" do %>
+        <%= link_to user_path(current_user.id), class: "nav-link" do %>
           Profile <i class="fa-regular fa-id-badge"></i>
         <% end %>
       </li>
