--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "pages/index";
 @import "pages/landingpage";
 @import "pages/show-user";
+@import "pages/dashboard";
 
 body {
   background-color: #0D0D0D;
