--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -22,5 +22,17 @@
   font-size: 15px;
   line-height: 18px;
   color: #FFFFFF;
+}
 
+.status-display {
+  background: linear-gradient(180deg, #91F5AD 0%, #2DE360 100%);
+  border-radius: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  width: 100%;
+  height: 99px;
+  display: flex;
+  justify-content: center;
+  align-items: center ;
+  flex-direction: column;
 }
