--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,9 +1,34 @@
-<div class="container d-flex align-items-center justify-content-between mx-2">
+<div class="container d-flex align-items-center justify-content-between my-3 px-4">
+
   <div>
-    <%= cl_image_tag current_user.photo.key, width: 65, height: 65, crop: :thumb, gravity: :face, class: "dashboard-user-pic" %>
+    <%= cl_image_tag current_user.photo.key, width: 65, height: 65, crop: :thumb, gravity: :face, class: "dashboard-user-pic me-4" %>
   </div>
+
   <div class="dashboard-greeting">
     <h1>Hi, <%= current_user.username %>!</h1>
     <p>You already had "sum of todays tab"</p>
   </div>
+
+</div>
+
+<div class="container my-3 px-4">
+
+  <div class="container status-display">
+
+    <div class="row">
+      <div class="col-12">
+        <h2>0.2% of alcohool</h2>
+      </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-12">
+        <p>Still Good to drive</p>
+      </div>
+
+    </div>
+  </div>
+
 </div>
