--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,9 +9,16 @@
 
 
     <div class="logo-AID">
-      <%# <%= link_to user_dashboard_path(current_user.id), class: "navbar-brand" do %>
-        <%# <%= image_tag "logo.png" %>
-      <%# <% end %> %> %> %>
+      <% if user_signed_in? %>
+        <%= link_to user_dashboard_path(current_user.id), class: "navbar-brand" do %>
+          <%= image_tag "logo.png" %>
+        <% end %>
+      <% else %>
+        <%= link_to root_path, class: "navbar-brand" do %>
+          <%= image_tag "logo.png" %>
+        <% end %>
+      <% end %>
+
     </div>
 
     <div class="profile-user">
@@ -49,10 +56,13 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <%# <%= link_to user_path(current_user.id), class: "nav-link" do %>
-          <%# Profile <i class="fa-regular fa-id-badge"></i>
-        <% end %> %> %>
+        <% if user_signed_in? %>
+          <%= link_to user_path(current_user.id ), class: "nav-link" do %>
+            Profile <i class="fa-regular fa-id-badge"></i> %>
+          <% end %>
+        <% end %>
       </li>
+
       <li class="nav-item">
         <%= link_to destroy_user_session_path, class: "nav-link", data: {turbo_method: :delete} do %>
           Log out <i class="fa-solid fa-power-off"></i>
