--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
   </head>
 
   <body>
-    <%= render "shared/navbar" %>
+    <% unless current_page?(root_path) %>
+      <%= render 'shared/navbar' %>
+    <% end %>
     <%= render "shared/flashes" %>
     <%= yield %>
   </body>
