--- a/app/views/tabs/index.html.erb
+++ b/app/views/tabs/index.html.erb
@@ -1,1 +1,41 @@
-<h1>TEST - TABS INDEX</h1>
+<div class= textinside>
+  <div class='container example-two'>
+    <header class='example-two-header'>
+      <span class='logo'>BarTab</span>
+      <nav class='vertical-align-middle scroll'>
+        <span class='nav-item'>Beer</span>
+        <span class='nav-item'>Wine</span>
+        <span class='nav-item'>Spirits</span>
+        <span class='nav-item'>Cocktails</span>
+        <span class='nav-item'>Cyder</span>
+      </nav>
+    </header>
+  </div>
+</div>
+
+<%# Bar Tab %>
+
+
+<%# Beer %>
+
+<%# Wine %>
+
+<div class= 'card-drinks'>
+  <div class= "img-drinks">
+    <img src="" alt="">
+  </div>
+  <div class= "drink-details">
+    <div id= "drink-name">
+      <p> Drink Name </p>
+    </div>
+    <div id= "alcohol-percentage">
+      <p> % Alcohol </p>
+    </div>
+  </div>
+</div>
+
+<%# Spirits %>
+
+<%# Cocktails %>
+
+<%# Cyder %>
