--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,18 @@
 <div id="profile">
   <div class="user-main-info">
     <%= cl_image_tag @user.photo.key, class: "user-img", crop: :thumb, gravity: :face %>
-    <p class="user-title"><u><%#= @user.username%>alexandre9915</u></p>
-    <p class="user-subtitle"><%#= @user.first_name @user.last_name%>Alexandre Ferreira</p>
+    <p class="user-title"><u><%= @user.username%></u></p>
+    <p class="user-subtitle"><%= @user.first_name %> <%= @user.last_name %></p>
   </div>
 
   <ul class="user-details">
     <li class="user-details-header">Gender</li>
-    <li class="user-details-p"><%#= @user.gender%>Male</li>
+    <li class="user-details-p"><%= @user.gender%></li>
     <li class="user-details-header">Height</li>
-    <li class="user-details-p"><%#= @user.height%>175 cm</li>
+    <li class="user-details-p"><%= @user.height%></li>
     <li class="user-details-header">Weight</li>
-    <li class="user-details-p"><%#= @user.weight%>62 kg</li>
+    <li class="user-details-p"><%= @user.weight%></li>
   </ul>
 
-  
+
 </div>
