Gender added to new_user form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
                 input_html: { autocomplete: "last-name" }%>
 
     <%= f.input :gender,
-                collection: [ "Male", "Female", "Alien" ]%>
+                collection: [ "Male", "Female", "Prefer not to say" ]%>
 
     <%= f.input :height, placeholder: "cm",
                 required: true,
