--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -32,3 +32,18 @@
   </div>
 
 </div>
+
+<div class= textinside>
+  <div class='container example-two'>
+    <header class='example-two-header'>
+      <span class='logo'>BarTab</span>
+      <nav class='vertical-align-middle scroll'>
+        <span class='nav-item'>Beer</span>
+        <span class='nav-item'>Wine</span>
+        <span class='nav-item'>Spirits</span>
+        <span class='nav-item'>Cocktails</span>
+        <span class='nav-item'>Cyder</span>
+      </nav>
+    </header>
+  </div>
+</div>
