--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "pages/landingpage";
 @import "pages/show-user";
 @import "pages/dashboard";
+@import "components/card_drinks";
 
 body {
   background-color: #0D0D0D;
