--- a/app/assets/stylesheets/components/_card_drinks.scss
+++ b/app/assets/stylesheets/components/_card_drinks.scss
@@ -1,7 +1,7 @@
 .card-drinks {
   display: flex;
   align-items: center ;
-  justify-content: space-evenly;
+  justify-content: space-between;
   margin: 20px auto;
   height: 88px;
   border-radius: 20px;
@@ -9,9 +9,17 @@
   width: 95%;
 }
 
-.drink-details {
-align-items: flex-end;
+.img-drinks {
+  height: 88px;
+  width: 88px;
+  background-color: gray;
+  border-radius: 20px;
+}
 
+.drink-details {
+justify-content: center;
+align-items: center;
+align-items: flex-end;
 }
 
 #drink-name {
@@ -26,12 +34,13 @@ align-items: flex-end;
   display: flex;
   align-items: center ;
   justify-content: center;
-  height: 44px;
+  height: 88px;
   background: linear-gradient(180deg, #FAC81E 0%, #FAC81EAD 100%);
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 #add-drink-text {
   color: #2A2A2A;
   text-decoration: none;
+  margin: 10px;
 }
