--- a/app/views/drinks/index.html.erb
+++ b/app/views/drinks/index.html.erb
@@ -1,18 +1,33 @@
 <h1>TEST</h1>
 
+<div class= textinside>
+  <div class='container example-two'>
+    <header class='example-two-header'>
+      <span class='logo'>BarTab</span>
+      <nav class='vertical-align-middle scroll'>
+        <span class='nav-item'>Beer</span>
+        <span class='nav-item'>Wine</span>
+        <span class='nav-item'>Spirits</span>
+        <span class='nav-item'>Cocktails</span>
+        <span class='nav-item'>Cyder</span>
+      </nav>
+    </header>
+  </div>
+</div>
+
 <div class= 'card-drinks'>
-    <div class= "img-drinks">
-      <img src="" alt="">
+  <div class= "img-drinks">
+    <img src="" alt="">
+  </div>
+  <div class= "drink-details">
+    <div id= "drink-name">
+      <p> Drink Name </p>
     </div>
-    <div class= "drink-details">
-      <div id= "drink-name">
-        <p> Drink Name </p>
-      </div>
-      <div id= "alcohol-percentage">
-        <p> Alcohol Percentage</p>
-      </div>
-    </div>
-    <div id= "btn-add-drink">
-      <a href="#" id= "add-drink-text"> Add to Bar Tab </a>
+    <div id= "alcohol-percentage">
+      <p> Alcohol % </p>
     </div>
   </div>
+  <div id= "btn-add-drink">
+    <a href="#" id= "add-drink-text"> Add Drink </a>
+  </div>
+</div>
