--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -33,17 +33,43 @@
 
 </div>
 
-<div class= textinside>
+<div class= "textinside" data-controller="drinks">
   <div class='container example-two'>
     <header class='example-two-header'>
       <span class='logo'>BarTab</span>
       <nav class='vertical-align-middle scroll'>
-        <span class='nav-item'>Beer</span>
-        <span class='nav-item'>Wine</span>
-        <span class='nav-item'>Spirits</span>
-        <span class='nav-item'>Cocktails</span>
-        <span class='nav-item'>Cyder</span>
+        <span class='nav-item' data-action="click->drinks#printBeers">Beers</span>
+        <span class='nav-item' data-action="click->drinks#printCyders">Cyders</span>
+        <span class='nav-item' data-action="click->drinks#printWines">Wines</span>
+        <span class='nav-item' data-action="click->drinks#printSpirits">Spirits</span>
+        <span class='nav-item' data-action="click->drinks#printCocktails">Cocktails</span>
+        <span class='nav-item' data-action="click->drinks#printShots">Shots</span>
+
       </nav>
     </header>
+  </div>
+
+  <div data-drinks-target="beers drinks" class="d-none">
+      <%= render 'drink-card', drinks: @beers %>
+  </div>
+
+  <div data-drinks-target="cyders drinks" class="d-none">
+      <%= render 'drink-card', drinks: @cyders %>
+  </div>
+
+  <div data-drinks-target="wines drinks" class="d-none">
+      <%= render 'drink-card', drinks: @wines %>
+  </div>
+
+  <div data-drinks-target="spirtis drinks" class="d-none">
+      <%= render 'drink-card', drinks: @spirits %>
+  </div>
+
+  <div data-drinks-target="cocktails drinks" class="d-none">
+      <%= render 'drink-card', drinks: @cocktails %>
+  </div>
+
+  <div data-drinks-target="shots drinks" class="d-none">
+      <%= render 'drink-card', drinks: @shots %>
   </div>
 </div>
