--- a/app/views/drinks/index.html.erb
+++ b/app/views/drinks/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class= 'card-drinks'>
   <div class= "img-drinks">
-    <img src="" alt="">
+    <img src="https://res.cloudinary.com/dqwh6jkno/image/upload/v1670237975/cocktail_ad7i5u.png" alt="cocktail">
   </div>
   <div class= "drink-details">
     <div id= "drink-name">
