--- a/app/assets/stylesheets/components/_card_drinks.scss
+++ b/app/assets/stylesheets/components/_card_drinks.scss
@@ -24,9 +24,9 @@
 
 }
 .drink-details {
-justify-content: center;
-align-items: center;
-align-items: flex-end;
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
 }
 
 #drink-name {
@@ -41,13 +41,15 @@ align-items: flex-end;
   display: flex;
   align-items: center ;
   justify-content: center;
-  height: 88px;
+  height: 44px;
+  width: 44px;
   background: linear-gradient(180deg, #FAC81E 0%, #FAC81EAD 100%);
-  border-radius: 20px;
+  border-radius: 15px;
 }
 
 #add-drink-text {
   color: #2A2A2A;
   text-decoration: none;
   margin: 10px;
+  font: bold;
 }
