--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -36,7 +36,7 @@
 <div class= "textinside" data-controller="drinks">
   <div class='container example-two'>
     <header class='example-two-header'>
-      <span class='logo'>BarTab</span>
+      <span class='logo' data-action="click->drinks#printBarTab">BarTab</span>
       <nav class='vertical-align-middle scroll'>
         <span class='nav-item' data-action="click->drinks#printBeers">Beers</span>
         <span class='nav-item' data-action="click->drinks#printCyders">Cyders</span>
@@ -49,8 +49,8 @@
     </header>
   </div>
 
-  <div data-drinks-target="bartab drinks" class="d-none">
-      <%= render 'bar-tab-cards', drinks: @tab_drinks %>
+  <div data-drinks-target="bartab drinks">
+      <%= render 'bar-tab-cards', tab: @tab %>
   </div>
 
   <div data-drinks-target="beers drinks" class="d-none">
