--- a/app/views/pages/_drink-card.html.erb
+++ b/app/views/pages/_drink-card.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div id= "btn-add-drink">
       <%# <a href="" id= "add-drink-text"> Add </a> %>
-      <%= render "add-form", drink: drink, tab_drink: @tab_drink, id: "add-drink-text" %>
+      <%= render "add-form", drink: drink, tab_drink: @tab_drink, placeholder: "Add", id: "add-drink-text" %>
     </div>
   </div>
 <% end %>
