--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,7 +6,7 @@
 
   <div class="dashboard-greeting">
     <h1>Hi, <%= current_user.username %>!</h1>
-    <p>You already had <%= @tab.tab_drinks.count %> drinks!</p>
+    <p>You already had <%= pluralize @tab.tab_drinks.count, "drink" %></p>
   </div>
 
 </div>
