ill be back in 5

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -58,7 +58,7 @@
   <% end %>
 </div>
 
-<div class= "textinside" data-controller="drinks">
+<div class= "container textinside" data-controller="drinks">
   <div class='container example-two'>
     <header class='example-two-header'>
       <span class='logo' data-action="click->drinks#printBarTab">BarTab</span>
