--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -18,8 +18,8 @@
 .dashboard-greeting p {
   font-family: 'Montserrat';
   font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
+  font-weight: 300;
+  font-size: 12px;
   line-height: 18px;
   color: #FFFFFF;
 }
@@ -34,4 +34,5 @@
   justify-content: center;
   align-items: center ;
   flex-direction: column;
+  color: #2A2A2A;
 }
