--- a/app/views/tabs/new.html.erb
+++ b/app/views/tabs/new.html.erb
@@ -1,3 +1,4 @@
 <h1>Create a new tab:</h1>
-
-<%= render "form", tab: @tab %>
+<div class="container" style="width:100vw">
+  <%= render "form", tab: @tab %>
+</div>
