--- a/app/views/tabs/new.html.erb
+++ b/app/views/tabs/new.html.erb
@@ -1,4 +1,4 @@
 <h1>Create a new tab:</h1>
-<div class="container" style="width:100vw">
+<div class="container">
   <%= render "form", tab: @tab %>
 </div>
