--- a/app/views/pages/_add-form.html.erb
+++ b/app/views/pages/_add-form.html.erb
@@ -1,3 +1,3 @@
 <%= simple_form_for([drink, tab_drink]) do |f| %>
-  <%= f.submit placeholder%>
+  <%= f.submit placeholder, id: "btn-add-drink" %>
 <% end %>
