--- a/app/assets/stylesheets/pages/_landingpage.scss
+++ b/app/assets/stylesheets/pages/_landingpage.scss
@@ -7,14 +7,13 @@
 #full-body {
   height: 100vh;
   width: 100vw;
-  background-image: url("https://images.unsplash.com/photo-1532634666-c89557092b9d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1769&q=80");
+  background-image: url("https://images.unsplash.com/photo-1582106245687-cbb466a9f07f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2669&q=80");
   background-position: center;
   background-size: cover;
 
 }
 
 .logo-lp {
-  width: 150px;
   display: flex;
   justify-content: center;
   padding: 56px;
@@ -30,7 +29,7 @@
   opacity: 1;
   color: white;
   border-radius: 15px;
-  box-shadow: gray 5 5 0;
+  box-shadow: 10px 5px 5px #1b1b1bab;
 }
 
 #disclaimer-text {
@@ -40,19 +39,19 @@
 }
 
 .btn-startcontainer {
- display: flex;
  justify-content: center;
  margin: 88px;
+
 }
 
 .btn-start {
   display: flex;
-  align-items: center ;
   justify-content: center;
-  width: 300px;
   height: 88px;
   background: linear-gradient(180deg, #FAC81E 0%, #FAC81EAD 100%);
   border-radius: 20px;
+  box-shadow: 10px 5px 5px #1b1b1bab;
+
 
 }
 
@@ -75,6 +74,7 @@
   display: flex;
   justify-content: center;
   margin: 88px;
+
  }
 
 
@@ -87,7 +87,8 @@
   height: 53px;
   background: linear-gradient(180deg, #FAC81E 0%, #FAC81EAD 100%);
   border-radius: 20px;
-  margin-top: inherit;
+  box-shadow: 10px 5px 5px #1b1b1bab;
+
 }
 
 #readmore {
