--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <div class="disclaimer-lp bg-img">
-      <p id="disclaimer-text">This app was made by three professional drunks, therefore, the results shown are not scientifically accurate, so we won't take any responsibility for the shit you make while you're drunk !</p>    </div>
+      <p id="disclaimer-text">This app was made by three professional drunks, therefore, the results shown are not scientifically accurate, so we won't take any responsibility for the sh*t you make while you're drunk !</p>    </div>
     </div>
 
   <div class="btn-startcontainer">
