--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -4,7 +4,6 @@
 
 
   <div class="form-actions">
-    <%= f.button :submit, class: "btn-edit"  %>
-
+    <%= f.button :submit, "CLOSE TAB", class: "close-tab-btn"  %>
   </div>
 <% end %>
