--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -77,6 +77,7 @@
 
   <div data-drinks-target="bartab drinks">
       <%= render 'bar-tab-cards', tab: @tab %>
+      <%= render "form", tab: @tab %>
   </div>
 
   <div data-drinks-target="beers drinks" class="d-none">
