navbar fixed to top

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,6 +6,8 @@
   min-height: 86px;
   font-size: 15px;
   font-weight: 700;
+  position: fixed;
+  top: 0;
 }
 
 .navbar-lewagon .navbar-collapse {
